<resources>
    <string name="_0">0</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_defaults">Account Defaults</string>
    <string name="acknowledge_info">Got It</string>
    <string name="active">ACTIVE</string>
    <string name="active_auto_dial_session">You have an active auto dial session</string>
    <string name="active_deals">Active Deals</string>
    <string name="active_deals_explanation">All your currently running deals at one place</string>
    <string name="activities">Activities</string>
    <string name="activity">Activity</string>
    <string name="activity_location">Track Location At the time of Activity</string>
    <string name="add">Add</string>
    <string name="add_another_lead">Add Another Lead?</string>
    <string name="add_call_details">Add Call Outcome</string>
    <string name="add_call_outcome">Add Call Outcome</string>
    <string name="add_comment">Add Comment</string>
    <string name="add_document">Add Document</string>
    <string name="add_lead">Add Single Lead</string>
    <string name="add_manual_call">Log Call Manually</string>
    <string name="add_member_team">Add Team Member</string>
    <string name="add_next_step">Add Next Step</string>
    <string name="add_notes">Add Note</string>
    <string name="add_or_modify_custom_properties">Add or Modify Custom Properties</string>
    <string name="add_or_modify_tags">Add or Modify Tags</string>
    <string name="add_task">Add Task</string>
    <string name="add_team_member_action">Add Team Member</string>
    <string name="add_to_team">Add Selected Users to Team</string>
    <string name="add_visit">Add Visit Outcome</string>
    <string name="add_visit_outcome">Add Visit Outcome</string>
    <string name="admin_settings">Admin</string>
    <string name="all">All</string>
    <string name="all_activity">All Activity</string>
    <string name="all_dashboard">All Dashboard</string>
    <string name="all_documents">Templates</string>
    <string name="all_leads">All Leads</string>
    <string name="all_logs">All Logs</string>
    <string name="all_overdue">All Overdue</string>
    <string name="all_playbooks">Sales Playbooks</string>
    <string name="all_reportees">Reportees</string>
    <string name="all_tasks">All Tasks</string>
    <string name="all_teams">Teams</string>
    <string name="all_users">Users</string>
    <string name="allow">Allow</string>
    <string name="allow_audio_recording">In order for you to add voice notes on lead or in post call disposition screen, or to send voice messages Salesmax needs record audio permission.</string>
    <string name="allow_audio_recording_title">Record Audio Permission</string>
    <string name="allow_call">Allow Salesmax to make phone calls. This permission enables you to make direct calls from within the app. By allowing this permission, you can seamlessly integrate call functions, ensuring that all your business interactions are efficiently logged and managed.</string>
    <string name="allow_call_log_access">Salesmax needs access to your call logs to automatically track and log your business calls. This helps you manage your client interactions, analyze call data, and maintain accurate records of your communications.It Also needs Permission to be able to send you notifications such as task reminders.</string>
    <string name="allow_call_log_access_no_notification">Salesmax needs access to your call logs to automatically track and log your business calls. This helps you manage your client interactions, analyze call data, and maintain accurate records of your communications.</string>
    <string name="allow_call_log_title">Access your Call Logs</string>
    <string name="allow_contact_access">Allow Salesmax to access your contacts to import selected contacts as leads. This will enable you to call, send WhatsApp messages, follow up, record outcomes, and more, directly from the app.</string>
    <string name="allow_contacts">Allow Salesmax to access your contacts to get smart actionable features to your contacts.</string>
    <string name="allow_to_draw_over_app">Allow Salesmax to draw over other apps. This permission enables features such as displaying the context of each incoming or outgoing call from your business contacts and prompting you to log call outcomes</string>
    <string name="alternate_mobile_no">Alternate Mobile No</string>
    <string name="alternate_number">Alternate Number</string>
    <string name="amplify_storage_notification_channel_id">Transfer Channel</string>
    <string name="amplify_storage_notification_channel_name">Amplify Transfer Channel</string>
    <string name="amplify_storage_notification_title">File transfer in progress</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_icon_badges">App Icon Badges</string>
    <string name="app_name">Salesmax</string>
    <string name="app_version">App Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="appointment_set">Appointment Set</string>
    <string name="argumentChannel">argumentChannel</string>
    <string name="argumentChatChannelId">argumentChatChannelId</string>
    <string name="argumentChatWindowMode">argumentChatWindowMode</string>
    <string name="argumentConfirmSignup">argumentConfirmSignup</string>
    <string name="argumentCurrentDestination">argumentCurrentDestination</string>
    <string name="argumentEngagementID">argumentEngagementID</string>
    <string name="argumentFile">argumentFile</string>
    <string name="argumentFileId">argumentFileId</string>
    <string name="argumentHandleCallOutcomeLocally">argumentHandleCallOutcomeLocally</string>
    <string name="argumentIsCallLogManual">argumentIsCallLogManual</string>
    <string name="argumentIsLockScreen">argumentIsLockScreen</string>
    <string name="argumentIsMyDashBoard">argumentIsMyDashBoard</string>
    <string name="argumentIsPermittedChannel">argumentIsPermittedChannel</string>
    <string name="argumentLeadId">argumentLeadId</string>
    <string name="argumentLeaderboardID">argumentLeaderboardID</string>
    <string name="argumentLeads">argumentLeads</string>
    <string name="argumentLeadsContinueAutoCall">argumentLeadsContinueAutoCall</string>
    <string name="argumentLeadsIsInCall">argumentLeadsIsInCall</string>
    <string name="argumentLeadsOpenAddSheet">argumentLeadsOpenAddSheet</string>
    <string name="argumentLeadsOpenCallDetails">argumentLeadsOpenCallDetails</string>
    <string name="argumentLoginOrSignup">argumentLoginOrSignup</string>
    <string name="argumentMessagePlatform">argumentMessagePlatform</string>
    <string name="argumentOtpBackPressed">argumentOtpBackPressed</string>
    <string name="argumentOutcomeNature">argumentOutcomeNature</string>
    <string name="argumentSavedTableViewInfo">argumentSavedTableViewInfo</string>
    <string name="argumentSharedFile">argumentSharedFile</string>
    <string name="argumentSourceCallLogManual">argumentSourceCallLogManual</string>
    <string name="argumentTasks">argumentTasks</string>
    <string name="argumentTasksOpenUpdateSheet">argumentTasksOpenUpdateSheet</string>
    <string name="argumentTeam">argumentTeam</string>
    <string name="argumentUser">argumentUser</string>
    <string name="argumentUserId">argumentUserId</string>
    <string name="argumentUserLocations">argumentUserLocations</string>
    <string name="argumentsPhoneNumberIdExternal">argumentsPhoneNumberIdExternal</string>
    <string name="articles">Articles</string>
    <string name="ask_for_invite">Ask your Manager/Admin to add you in the workspace. Once added, you will see the invite here.</string>
    <string name="assign">Assign</string>
    <string name="assign_chats">Assign Chats</string>
    <string name="assign_lead">Assign Lead</string>
    <string name="assign_leads">Assign Selected Leads</string>
    <string name="assign_open_deals">Assign Open Deals</string>
    <string name="assign_open_tasks">Assign Open Tasks</string>
    <string name="assign_people">Assign Owner</string>
    <string name="back">Back</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="create_team">Create New Team</string>
    <string name="demo">Demo</string>
    <string name="device_model">Device Model</string>
    <string name="email">Email</string>
    <string name="follow_up">Follow Up</string>
    <string name="get_appointment">Get Appointment</string>
    <string name="get_document">Collect Documents</string>
    <string name="high">High</string>
    <string name="home">Home</string>
    <string name="in_person_meeting">In Person Meeting</string>
    <string name="input_user_email">Official Email Id</string>
    <string name="invite_heading">Invite User To Workspace</string>
    <string name="leads">Leads</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="open_app_permissions">Open App Permissions</string>
    <string name="open_battery_optimization_setting">Open Battery Optimization Setting</string>
    <string name="open_draw_over_other_apps_setting">Open Draw Over Other Apps Setting</string>
    <string name="reset_all_preferences">Reset All Preferences</string>
    <string name="send_document">Send Documents</string>
    <string name="send_proposal">Send Proposal</string>
    <string name="set_task_activity">Set Activity Needed For Task</string>
    <string name="set_task_priority">Set Task Priority</string>
    <string name="set_task_type">Set Task Type</string>
    <string name="to_do">To-Do</string>
    <string name="very_high">Very High</string>
    <string name="very_low">Very Low</string>
    <string name="visit">Visit</string>
    <string name="yes">Yes</string>
</resources>