<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/add_task_tag_0"
    android:paddingBottom="@dimen/grid_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:backgroundTint="@color/superfone_gray_300"
        app:icon="@drawable/ic_back_arrow"
        app:iconTint="@color/superfone_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.Superfone.TextButtonNoPadding"/>
    <com.google.android.material.textview.MaterialTextView
        android:textAppearance="@style/TextAppearance.Superfone.Headline5"
        android:gravity="center"
        android:id="@+id/taskTypeHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_1_5"
        android:text="@string/set_task_type"
        android:layout_marginStart="@dimen/grid_2"
        android:layout_marginEnd="@dimen/grid_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipTagGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/grid_2"
        android:layout_marginEnd="@dimen/grid_2"
        app:chipSpacingHorizontal="@dimen/grid_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        app:singleLine="false"
        app:singleSelection="true">
        <com.google.android.material.chip.Chip
            android:id="@+id/chipFollowUp"
            android:tag="binding_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow_up"
            style="@style/Widget.Superfone.ChipStroke"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chipSendProposal"
            android:tag="binding_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_proposal"
            style="@style/Widget.Superfone.ChipStroke"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chipDemo"
            android:tag="binding_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo"
            style="@style/Widget.Superfone.ChipStroke"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chipSendDocument"
            android:tag="binding_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_document"
            style="@style/Widget.Superfone.ChipStroke"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chipGetDocument"
            android:tag="binding_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_document"
            style="@style/Widget.Superfone.ChipStroke"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chipGetAppointment"
            android:tag="binding_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_appointment"
            style="@style/Widget.Superfone.ChipStroke"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chipInPersonMeeting"
            android:tag="binding_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_person_meeting"
            style="@style/Widget.Superfone.ChipStroke"/>
    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
