<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/about_fragment_0"
    android:background="?attr/colorLightBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:background="?attr/colorSurface"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_hideable="true"
        app:layout_behavior="@string/bottom_sheet_behavior">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/supportDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_1_5"
            android:layout_marginEnd="@dimen/grid_1_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.button.MaterialButton
                android:gravity="center_vertical"
                android:id="@+id/resetPreferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_all_preferences"
                app:icon="@drawable/ic_refresh_sync"
                app:iconGravity="end"
                app:iconPadding="@dimen/grid_2"
                style="@style/Widget.Superfone.TextButton"/>
            <com.google.android.material.button.MaterialButton
                android:gravity="center_vertical"
                android:id="@+id/openAppPermissions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_app_permissions"
                app:icon="@drawable/ic_arrow_right"
                app:iconGravity="end"
                app:iconPadding="@dimen/grid_2"
                style="@style/Widget.Superfone.TextButton"/>
            <com.google.android.material.button.MaterialButton
                android:gravity="center_vertical"
                android:id="@+id/openDrawOverApps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_draw_over_other_apps_setting"
                app:icon="@drawable/ic_arrow_right"
                app:iconGravity="end"
                app:iconPadding="@dimen/grid_2"
                style="@style/Widget.Superfone.TextButton"/>
            <com.google.android.material.button.MaterialButton
                android:gravity="center_vertical"
                android:id="@+id/openBatteryOptimization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_battery_optimization_setting"
                app:icon="@drawable/ic_arrow_right"
                app:iconGravity="end"
                app:iconPadding="@dimen/grid_2"
                style="@style/Widget.Superfone.TextButton"/>
            <com.google.android.material.button.MaterialButton
                android:gravity="center_vertical"
                android:id="@+id/appVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                style="@style/Widget.Superfone.TextButton"/>
            <com.google.android.material.button.MaterialButton
                android:gravity="center_vertical"
                android:id="@+id/deviceModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_model"
                style="@style/Widget.Superfone.TextButton"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
