<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/sheetDeleteMultipleDialog"
    android:tag="layout/dialog_missing_email_0"
    android:padding="@dimen/grid_2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inviteEmailHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_user_email"
        android:imeOptions="actionDone"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inviteEmail"
            android:background="@drawable/ic_bottom_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"/>
        <requestFocus/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:backgroundTint="@color/superfone_gray_300"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inviteEmailHint"
        style="@style/Widget.Superfone.TextButtonNoPadding"/>
    <com.google.android.material.button.MaterialButton
        android:textColor="?attr/colorOnPrimary"
        android:id="@+id/buttonDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inviteEmailHint"
        style="@style/Widget.Superfone.TextButtonNoPadding"/>
</androidx.constraintlayout.widget.ConstraintLayout>
